--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-psycopg2-binary
-Django
-pillow
-djangorestframework
+asgiref==3.7.2
+Django==5.0.2
+djangorestframework==3.14.0
+pillow==10.2.0
+pytz==2024.1
+sqlparse==0.4.4
+typing_extensions==4.9.0
+tzdata==2024.1
